@@ -4,8 +4,8 @@
 @LINK=silcrng_intro.html:Introduction to SILC RNG
 @LINK=silcrng.html:SILC RNG Interface
 @LINK=silchmac.html:SILC HMAC Interface
+@LINK=silchash.html:SILC Hash Interface
 @LINK=silccipher.html:SILC Cipher API
-@LINK=silchash.html:SILC Hash API
 @LINK=silcpkcs.html:SILC PKCS API
 -->
 
